--- a/app/location/[slug]/location.module.scss
+++ b/app/location/[slug]/location.module.scss
@@ -16,14 +16,10 @@
   }
 
   @media (min-width: 768px) {
-    gap: 16px;
-  }
-
-  @media (min-width: 1024px) {
     gap: 64px;
   }
 
-  @media (min-width: 1280px) {
+  @media (min-width: 1024px) {
     gap: 128px;
   }
 }
