--- a/styles/global.scss
+++ b/styles/global.scss
@@ -11,7 +11,7 @@
   }
 
   @media (min-width: 1024px) {
-    max-width: 768px;
+    max-width: 1024px;
   }
 
   @media (min-width: 1280px) {
